; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs_vfsops.c_nfs_vfs_sync.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs_vfsops.c_nfs_vfs_sync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs_sync_cargs = type { i32, i32, i32 }

@nfs_sync_callout = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nfs_vfs_sync(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.nfs_sync_cargs, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %5, align 4
  %9 = getelementptr inbounds %struct.nfs_sync_cargs, %struct.nfs_sync_cargs* %7, i32 0, i32 0
  store i32 %8, i32* %9, align 4
  %10 = load i32, i32* %6, align 4
  %11 = getelementptr inbounds %struct.nfs_sync_cargs, %struct.nfs_sync_cargs* %7, i32 0, i32 2
  store i32 %10, i32* %11, align 4
  %12 = getelementptr inbounds %struct.nfs_sync_cargs, %struct.nfs_sync_cargs* %7, i32 0, i32 1
  store i32 0, i32* %12, align 4
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @nfs_sync_callout, align 4
  %15 = call i32 @vnode_iterate(i32 %13, i32 0, i32 %14, %struct.nfs_sync_cargs* %7)
  %16 = getelementptr inbounds %struct.nfs_sync_cargs, %struct.nfs_sync_cargs* %7, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  ret i32 %17
}

declare dso_local i32 @vnode_iterate(i32, i32, i32, %struct.nfs_sync_cargs*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
